Add SSL nginx config for p5200

--- a/nginx/p5200.winds-os.com.conf
+++ b/nginx/p5200.winds-os.com.conf
@@ -1,5 +1,20 @@
 server {
+    listen 80;
+    listen [::]:80;
     server_name p5200.winds-os.com;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name p5200.winds-os.com;
+
+    ssl_certificate /etc/letsencrypt/live/p5200.winds-os.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/p5200.winds-os.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         proxy_pass http://localhost:5200;
@@ -17,7 +32,4 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
-
-    listen 80;
-    listen [::]:80;
 }
