--- a/nginx/p5200.winds-os.com.conf
+++ b/nginx/p5200.winds-os.com.conf
@@ -17,7 +17,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://localhost:5200;
+        proxy_pass http://127.0.0.1:5200;
         proxy_http_version 1.1;
 
         proxy_set_header Upgrade $http_upgrade;
